[package]
name = "dec-core"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-match = '0.2'
bitvec = { version = '0.19', optional = true, default-features = false }