[package]
name = "dec-pratt"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dec-core = { path = '../dec-core' }
smallvec = { version = '1', default-features = false, optional = true }
arrayvec = { version = '0.5', default-features = false, optional = true }

[dependencies.generic-vec]
optional = true
git = 'https://github.com/RustyYato/generic-vec'
branch = 'main'
default-features = false

[dev-dependencies]
dec = { path = '../dec' }