[package]
name = "dec"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['big-tuples']

nightly = []
big-tuples = []

[dependencies]
cfg-match = '0.2'
smallvec = { version = '1', optional = true }