[package]
name = "dec"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# default = ['rayon']
default = ['big-tuples', 'rayon']

std = ['alloc']
alloc = []

nightly = []
big-tuples = []

[dependencies]
dec-core = { path = '../dec-core' }
cfg-match = '0.2'
rayon = { version = '1', optional = true, default-features = false }

[dev-dependencies]
criterion = '0.3'

[[bench]]
name = "separated"
harness = false